# mouse-quest

./: .gitignore  .todo-preview.md.swo  .todo-preview.md.swp  CMakeCache.txt  git-tips.txt  licence.txt  todo-preview.md
assets/: Hit_Hurt17.bfxrsound  Hit_Hurt18.bfxrsound  MQ - Title.xcf  Mike.xcf  Powerup18.bfxrsound  Powerup8.bfxrsound  Powerup9.bfxrsound  Virus-23.xcf  Virus-24.xcf  Virus-25.xcf  Virus-26.xcf  Virus-27-vibrant.xcf  Virus-27.xcf  _mike-sprint.xcf  base-large-2-Canvas.xcf  base-large-2-chip.xcf  base-large-2.xcf  base-large-b.xcf  base-large-chip-2.xcf  base-large-chip-3.xcf  base-large-chip-4.xcf  base-large-chip-5.xcf  base-large-chip-6.xcf  base-large-chip-gold-1.xcf  base-large-chip-gold-1b.xcf  base-large-chip-gold-2.xcf  base-large-chip-gold-3.xcf  base-large-chip-gold-3b.xcf  base-large-chip.xcf  base-large-tileset-2.xcf  base-large-tileset-3.xcf  base-large-tileset-4-double-classic.xcf  base-large-tileset-4-double.xcf  base-large-tileset-4-thin.xcf  base-large-tileset-4.xcf  base-large-tileset.xcf  base-large.xcf  base-ne.xcf  base-raw.xcf  base.xcf  (+146 more)
assets/icon/: create.bat  icon-help.txt  mq-program-icon.xcf  mq.rc  mq.res
docs/: Feature plan  Other game ideas  c-tips  changelog  changelog.txt  feature-plan  feature-plan-2015-07  git-tips  idea-list  music  todo-2015-09-15
pastebin/: Drawing transparent rectangles in a texture  Full scripting of enemy formations  Non-biased random function  Parallax note  Random sprites and rotation  Refactored health bar  Sine wave strafing  State transition pub-sub model  Useless separated texture stuff  White colourisation  cue - do while loop  intro-slow-entrance
src/: CMakeLists.txt  LEVEL-custom.csv  LEVEL00.csv  LEVEL01.csv  LEVEL01.txt  README.TXT  assets.c  assets.h  background.c  background.h  common.c  common.h  enemy.c  enemy.h  formations.c  formations.h  hud.c  hud.h  input.c  input.h  item.c  item.h  level.c  level.h  main.c  main.h  mouse-quest  mouse-quest - Shortcut.lnk  mq.res  myc.h  mysdl.h  player.c  player.h  readme.md  renderer.c  renderer.h  savepng.c  script.c  scripting.c  scripting.h  (+9 more)
src/assets/: Pickup_Coin34.bfxrsound  Powerup24.bfxrsound  base-large-chip.xcf  base-large.xcf  super-fleck.xcf
src/cmake/: FindSDL2_Mixer.cmake
